# rosclaw-example-so-101

./: .gitignore  .gitmodules  README.md
Backend/ros2_ws/: build.sh
Backend/ros2_ws/compat/so101_teleop/: CMakeLists.txt  package.xml
Backend/ros2_ws/compat/so101_teleop/config/: so101_leader_teleop.yaml
Backend/ros2_ws/compat/system_data_recorder/: CMakeLists.txt  README.md  package.xml
Backend/ros2_ws/scripts/: prepare_compat_sources.sh
Backend/ros2_ws/src/rosclaw_so101_bringup/: package.xml  setup.cfg  setup.py
Backend/ros2_ws/src/so101_follower_control/: README.md  package.xml  setup.cfg  setup.py
Backend/ros2_ws/src/so101_follower_control/config/: follower_bridge.yaml
Backend/ros2_ws/src/so101_follower_control/launch/: follower_control.launch.py
Backend/ros2_ws/src/so101_follower_control/resource/: so101_follower_control
Backend/ros2_ws/src/so101_follower_control/rviz/: follower_control.rviz
Backend/ros2_ws/src/so101_follower_control/so101_follower_control/: __init__.py  agent_bridge_node.py  cartesian_goal_node.py  cartesian_goal_runtime.py  cartesian_kinematics.py  follower_bridge_node.py  follower_bridge_runtime.py  gripper_command_example.py  joint_state_echo.py  joint_trajectory_example.py  runtime_utils.py
Backend/ros2_ws/src/so101_follower_control/test/: test_agent_bridge_node.py  test_cartesian_goal_runtime.py  test_cartesian_kinematics.py  test_follower_bridge_runtime.py  test_follower_control_launch.py  test_smoke.py
Backend/ros2_ws/src/so101_pose_registry/: README.md  package.xml  setup.cfg  setup.py
Backend/ros2_ws/src/so101_pose_registry/resource/: so101_pose_registry
Backend/ros2_ws/src/so101_pose_registry/so101_pose_registry/: __init__.py  pose_cli.py  pose_registry_node.py  registry_store.py
Backend/ros2_ws/src/so101_pose_registry/test/: test_registry_store.py
Backend/ros2_ws/src/so101_pose_registry_interfaces/: CMakeLists.txt  package.xml
Backend/ros2_ws/src/so101_pose_registry_interfaces/msg/: NamedPose.msg  ResolvedCartesianGoal.msg  WorkspaceBounds.msg
Backend/ros2_ws/src/so101_pose_registry_interfaces/srv/: ConvertCartesianCoordinates.srv  GetNamedPose.srv  ListNamedPoses.srv  MoveToCartesianGoal.srv  MoveToNamedPose.srv  ResolveCartesianGoal.srv  SaveCurrentPose.srv
Frontend/robot-copilot-demo/docs/: ros2-setup.md
Frontend/robot-copilot-demo/robot-copilot-demo/: AppModel+CommandFlow.swift  AppModel.swift  ContentView.swift  FollowerPresets.swift  ImmersiveView.swift  Info.plist  SpatialStylusModel.swift  SpatialTargetingMath.swift  ToggleImmersiveSpaceButton.swift  robot_copilot_demoApp.swift
Frontend/robot-copilot-demo/robot-copilot-demo.xcodeproj/: project.pbxproj
Frontend/robot-copilot-demo/robot-copilot-demo/Agent/: AnyCodableAccess.swift  GatewayDeviceIdentity.swift  GatewayRobotExecutor.swift  OpenClawGatewaySession.swift
Frontend/robot-copilot-demo/robot-copilot-demo/Extensions/: SIMD3+Extension.swift
Frontend/robot-copilot-demo/robot-copilot-demo/RealityKit/: RobotEntityBuilder.swift
Frontend/robot-copilot-demo/robot-copilot-demo/Views/: CommandInputView.swift  CommandPreviewView.swift  ControlWindowView.swift  DiagnosticsView.swift  RobotStatusAttachmentView.swift  RobotStatusView.swift  RobotVolumeView.swift  SettingsView.swift  SpatialAlignmentView.swift
Frontend/robot-copilot-demo/robot-copilot-demoTests/: robot_copilot_demoTests.swift
Frontend/spatial-copilot/spatial-copilot/: CartesianVoiceCommandSupport.swift  FollowerPresets.swift  Info.plist  SpatialPlaneProjector.swift  SpatialStylusModel.swift  SpatialTargetingMath.swift  spatial_copilotApp.swift
Frontend/spatial-copilot/spatial-copilot.xcodeproj/: project.pbxproj
Frontend/spatial-copilot/spatial-copilot/Agent/: GatewayDeviceIdentity.swift  GatewayRobotExecutor.swift
Frontend/spatial-copilot/spatial-copilot/Extensions/: SIMD3+Extension.swift
Frontend/spatial-copilot/spatial-copilot/Models/: AppCoordinator.swift  CommandFlowModel.swift  RobotConnectionModel.swift  RobotStateModel.swift  SpatialSessionModel.swift
Frontend/spatial-copilot/spatial-copilotTests/: SpatialImmersiveTests.swift  spatial_copilotTests.swift
(+33 files in other folders)
