<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so101_follower_control</name>
  <version>0.1.0</version>
  <description>Standard ROS2 bringup and example clients for controlling the SO-101 follower arm.</description>
  <maintainer email="marcodotio@example.com">marcodotio</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>urdfdom_py</depend>
  <depend>python3-pykdl</depend>
  <depend>python3-numpy</depend>
  <depend>so101_description</depend>
  <depend>so101_controller</depend>
  <depend>so101_ros2_bridge</depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
