<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so101_pose_registry</name>
  <version>0.1.0</version>
  <description>Named pose registry, live Cartesian stats, and CLI utilities for the SO-101 follower.</description>
  <maintainer email="marcodotio@example.com">marcodotio</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>so101_follower_control</depend>
  <depend>so101_pose_registry_interfaces</depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
